# noname-tesseract

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: create-release.yaml  macos-build.yml  release.yml  test.yml
src/: components.rs  constants.rs  main.rs
src/systems/: blur.rs  keyboard.rs  mod.rs  mouse.rs  setup.rs  state.rs  ui.rs
src/utils/: blur_image.rs  get_clipboard_image.rs  img.rs  mod.rs  rect.rs
