[package]
description = "noname is a CLI tool that makes it easy to remove PII from screenshots"
edition = "2021"
license-file = "LICENSE"
name = "noname"
repository = "https://github.com/antonKalinin/noname/"
version = "0.1.22"

[dependencies]
arboard = "2.0.0"
bevy = "0.6"
bevy_prototype_lyon = "0.4.0"
image = "0.23.14"
leptess = "0.13.0"
regex = "1.5.4"
winit = {version = "0.24.0"}

[workspace]
resolver = "2"
